--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ deploy:
   provider: script
   script: |
     echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-    docker push matthijsbos/nerdrage-dev
+    && docker push matthijsbos/nerdrage-dev
